# Entity-Tree-Component-System

./: CMakeLists.txt  LICENSE  README.md
include/ETCS/: Component.h  ECS.h  ETCS.h  Entity.h  EntityQuery.h  EntityRange.h  Prefab.h  System.h  Transform.h  World.h
include/ETCS/Components/: Transform.h
include/ETCS/Detail/: Archetype.h  ArchetypeManager.h  Core.h  EntityManager.h  Managers.h  SystemManager.h  World.h  WorldData.h
src/: ECS.cpp  ETCS.cpp  Entity.cpp  EntityQuery.cpp  EntityRange.cpp  World.cpp
src/Components/: Transform.cpp
src/Detail/: Archetype.cpp  ArchetypeManager.cpp  EntityManager.cpp  Managers.cpp  SystemManager.cpp
